--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,3 +3,16 @@ example:
   name: Example User
   email: user@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
+
+gaga:
+  name: Lady Gaga
+  email: not@joanne.com
+  password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name: <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
