--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,16 +3,22 @@ example:
   name: Example User
   email: user@example.com
   password_digest: <%= User.digest('password') %>
-  admin: true
+  admin: true,
+  activated: true
+  activated_at: Time.zone.now
 
 gaga:
   name: Lady Gaga
   email: not@joanne.com
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: Time.zone.now
 
 <% 30.times do |n| %>
 user_<%= n %>:
   name: <%= "User #{n}" %>
   email: <%= "user-#{n}@example.com" %>
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: Time.zone.now
 <% end %>
